[project]
name = "cogniverse-finetuning"
version = "0.1.0"
description = "LLM fine-tuning infrastructure with LoRA/PEFT and DPO for Cogniverse agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",
    "cogniverse-agents",
    "cogniverse-synthetic",       # Reuse existing synthetic data generation
    "cogniverse-foundation",      # Telemetry provider interfaces (TraceStore, AnnotationStore, DatasetStore)
    # Note: Uses telemetry provider abstraction, not direct Phoenix dependency

    # Fine-tuning core libraries
    "peft==0.17.1",           # LoRA/PEFT adapters
    "transformers==4.56.2",   # Hugging Face transformers
    "datasets==4.8.4",        # Dataset loading and processing
    "accelerate==1.13.0",      # Training acceleration
    "trl==1.1.0",            # DPO, PPO, RLHF trainers (SFTTrainer, DPOTrainer)

    # Training infrastructure
    "torch==2.8.0",
    # "bitsandbytes>=0.45.0",   # Quantization and memory optimization (optional - Linux/Windows only, not available on macOS)
    "scipy==1.17.1",

    # Embedding fine-tuning
    "sentence-transformers==5.1.1",  # Contrastive learning for embeddings

    # Experiment tracking
    "mlflow==3.11.1",

    # Cloud infrastructure
    "modal==1.4.1",          # Modal GPU jobs
    "boto3==1.40.61",          # S3 for model storage
    "huggingface-hub>=0.28.0", # HF Hub integration

    # Data processing
    "pandas==2.3.3",
    "pyarrow==23.0.1",        # Efficient dataset serialization
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }
cogniverse-agents = { workspace = true }
cogniverse-synthetic = { workspace = true }
cogniverse-foundation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_finetuning"]
