[project]
name = "cogniverse-messaging"
dynamic = ["version"]
description = "Messaging gateway for Telegram/Slack integration"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[webhooks]==22.7",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Package lives at libs/<pkg>; the git repo (tag source) is two levels up.
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_messaging"]
