[project]
name = "cogniverse-runtime"
version = "0.1.0"
description = "Unified runtime server for Cogniverse with dynamic backend loading"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",

    # FastAPI and server
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "pyyaml==6.0.3",

    # Computer Vision for processing
    "opencv-python==4.13.0.92",
    "pillow==12.2.0",

    # Audio processing
    "openai-whisper==20250625",
    "faster-whisper==1.2.1",
    "librosa==0.11.0",

    # Document processing
    "pdf2image==1.17.0",
    "pypdf2==3.0.1",

    # JAX is imported at module load time by
    # ``cogniverse_core.common.models.videoprism_models`` regardless of
    # whether a VideoPrism profile is in use, so it stays in base deps.
    # The rest of the VideoPrism stack (flax / einops / einshape /
    # tensorflow) is gated behind the ``videoprism`` extra so non-
    # VideoPrism deployments — especially AMD ROCm where tensorflow has
    # no published wheel — can install without resolution conflicts.
    "jax==0.9.2",
    "jaxlib==0.9.2",

    # Utilities
    "msgpack==1.1.2",

    # A2A Protocol
    "a2a-sdk[http-server]==0.3.26",

    # Sandbox runtime (OpenShell) for coding agent code execution.
    # Pinned to match the host gateway version — the SDK and gateway must
    # be version-compatible for mTLS and the gRPC protocol.
    "openshell==0.0.13",

    # Redis Streams + consumer groups for the ingestion_v2 queue.
    "redis==5.2.1",

    # boto3 for MinIO uploads on the /ingestion/upload multipart path.
    "boto3==1.40.61",
]

[project.optional-dependencies]
vespa = ["cogniverse-vespa"]
agents = ["cogniverse-agents"]
# VideoPrism in-process inference stack. Heavy and platform-fragmented:
# tensorflow has no AMD ROCm wheel and weak aarch64 support, jax/jaxlib
# pins differ across CUDA / ROCm. Deployments that don't run a
# VideoPrism profile (e.g. video_*_videoprism_*) skip this entirely.
# The chart's ingestor image installs cogniverse-runtime[videoprism]
# only when at least one VideoPrism profile is enabled.
videoprism = [
    "flax==0.12.0",
    "einops==0.8.1",
    "einshape==1.0",
    "tensorflow==2.20.0",
]
all = ["cogniverse-vespa", "cogniverse-agents"]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }
cogniverse-vespa = { workspace = true }
cogniverse-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_runtime"]
