[project]
name = "cogniverse-runtime"
version = "0.1.0"
description = "Unified runtime server for Cogniverse with dynamic backend loading"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",

    # FastAPI and server
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "pyyaml==6.0.3",

    # Computer Vision for processing
    "opencv-python==4.13.0.92",
    "pillow==12.2.0",

    # Audio processing
    "openai-whisper==20250625",
    "faster-whisper==1.2.1",
    "librosa==0.11.0",

    # Document processing
    "pdf2image==1.17.0",
    "pypdf2==3.0.1",

    # Utilities
    "msgpack==1.1.2",

    # A2A Protocol
    "a2a-sdk[http-server]==0.3.26",

    # Sandbox runtime (OpenShell) for coding agent code execution.
    # Pinned to match the host gateway version — the SDK and gateway must
    # be version-compatible for mTLS and the gRPC protocol.
    "openshell==0.0.13",

    # Redis Streams + consumer groups for the ingestion_v2 queue.
    "redis==5.2.1",

    # boto3 for MinIO uploads on the /ingestion/upload multipart path.
    "boto3==1.40.61",
]

[project.optional-dependencies]
vespa = ["cogniverse-vespa"]
agents = ["cogniverse-agents"]
# VideoPrism is now served by the dedicated `deploy/videoprism` sidecar
# and addressed via `inference_services.embedding=videoprism_jax` on the
# profile (see RemoteVideoPrismLoader). The runtime image therefore no
# longer carries the JAX / flax / tensorflow stack — TF's static
# initialiser used to abort on darwin when loaded into the same process
# as uvicorn server threads, and TF has no ROCm wheel.
all = ["cogniverse-vespa", "cogniverse-agents"]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }
cogniverse-vespa = { workspace = true }
cogniverse-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_runtime"]
