[project]
name = "cogniverse-sdk"
version = "0.1.0"
description = "Cogniverse SDK - Core interfaces for backend implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Zero internal cogniverse dependencies
    # Only standard library and essential external dependencies
    "numpy>=1.24.0",  # For embedding arrays in backend interface
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_sdk"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
