[project]
name = "cogniverse-sdk"
dynamic = ["version"]
description = "Cogniverse SDK - Core interfaces for backend implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Zero internal cogniverse dependencies
    # Only standard library and essential external dependencies
    "numpy==2.4.4",  # For embedding arrays in backend interface
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.10",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Package lives at libs/<pkg>; the git repo (tag source) is two levels up.
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_sdk"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
