[project]
name = "cogniverse-synthetic"
version = "0.1.0"
description = "Synthetic data generation for all Cogniverse optimizers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    # Data validation
    "pydantic>=2.0.0",

    # HTTP client for Vespa
    "httpx>=0.24.0",

    # FastAPI for REST API
    "fastapi>=0.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_synthetic"]
