[project]
name = "cogniverse-synthetic"
dynamic = ["version"]
description = "Synthetic data generation for all Cogniverse optimizers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-foundation",
    "cogniverse-core",
    # Data validation
    "pydantic==2.12.5",

    # HTTP client for Vespa
    "httpx==0.28.1",

    # FastAPI for REST API
    "fastapi==0.135.3",

    # DSPy for LLM-driven query generation
    "dspy-ai==3.1.3",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-foundation = { workspace = true }
cogniverse-core = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Package lives at libs/<pkg>; the git repo (tag source) is two levels up.
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_synthetic"]
