[project]
name = "cogniverse-telemetry-phoenix"
version = "0.1.0"
description = "Phoenix telemetry provider for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-core",
    "cogniverse-evaluation",
    "arize-phoenix>=12.9.0",
    "pandas>=2.0.0",
]

[project.entry-points."cogniverse.telemetry.providers"]
phoenix = "cogniverse_telemetry_phoenix:PhoenixProvider"

[project.entry-points."cogniverse.evaluation.providers"]
phoenix = "cogniverse_telemetry_phoenix.evaluation.evaluation_provider:PhoenixEvaluationProvider"

[tool.uv.sources]
cogniverse-core = { workspace = true }
cogniverse-evaluation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_telemetry_phoenix"]
