[project]
name = "cogniverse-vespa"
version = "0.1.0"
description = "Vespa backend implementation for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-core",
    "pyvespa>=0.59.0",
    "numpy>=1.24.0",
]

[tool.uv.sources]
cogniverse-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_vespa"]
