[project]
name = "cogniverse-vespa"
dynamic = ["version"]
description = "Vespa backend implementation for Cogniverse"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cogniverse Team"}
]

dependencies = [
    "cogniverse-sdk",
    "cogniverse-core",
    "pyvespa==1.1.2",
    "numpy==2.4.4",
]

[tool.uv.sources]
cogniverse-sdk = { workspace = true }
cogniverse-core = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Package lives at libs/<pkg>; the git repo (tag source) is two levels up.
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["cogniverse_vespa"]

[project.entry-points."cogniverse.adapter.stores"]
vespa = "cogniverse_vespa.registry.adapter_store:VespaAdapterStore"
