[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniverse-app"
version = "0.1.0"
description = "Main application module for Cogniverse"
authors = [{name = "Cogniverse Team"}]
requires-python = ">=3.8"
dependencies = [
    "cogniverse-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pillow>=9.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "phoenix-otel>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ingestion*", "search*", "agents*", "instrumentation*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]