[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniverse-core"
version = "0.1.0"
description = "Core interfaces and utilities for Cogniverse"
authors = [{name = "Cogniverse Team"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.10.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "core*", "models*", "cache*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]