[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniverse-evaluation"
version = "0.1.0"
description = "Evaluation and metrics module for Cogniverse"
authors = [{name = "Cogniverse Team"}]
requires-python = ">=3.8"
dependencies = [
    "cogniverse-core>=0.1.0",
    "cogniverse-app>=0.1.0",
    "inspect-ai>=0.3.0",
    "ragas>=0.1.0",
    "arize-phoenix>=2.0.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluation*", "evaluators*", "inspect_tasks*", "phoenix*", "scorers*", "datasets*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.csv"]